--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ponpes At-Taufiq</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   <style>
     * {
       box-sizing: border-box;
@@ -13,178 +13,111 @@
     body {
       font-family: Arial, sans-serif;
     }
-    /* PRELOADER */
-    .preloader {
+    /* HEADER */
+    .header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background: rgba(0, 0, 0, 0.8);
+      padding: 15px 20px;
       position: fixed;
       width: 100%;
-      height: 100%;
+      top: 0;
+      z-index: 1000;
+    }
+    .logo img {
+      height: 40px;
+    }
+    .menu-icon {
+      font-size: 24px;
+      color: white;
+      cursor: pointer;
+    }
+    /* MENU HAMBURGER */
+    .menu {
+      position: fixed;
+      top: 0;
+      right: -250px;
+      width: 250px;
+      height: 100vh;
       background: black;
+      padding: 20px;
+      transition: 0.3s;
+    }
+    .menu.active {
+      right: 0;
+    }
+    .menu ul {
+      list-style: none;
+      padding: 0;
+    }
+    .menu ul li {
+      margin: 20px 0;
+    }
+    .menu ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+    }
+    .close-btn {
+      color: white;
+      font-size: 24px;
+      cursor: pointer;
+      display: block;
+      text-align: right;
+    }
+    /* KONTEN UTAMA */
+    .main-content {
+      display: none;
+      height: 100vh;
+      color: white;
+      text-align: center;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      z-index: 9999;
-      transition: opacity 0.5s ease-out;
+      position: relative;
+      padding: 20px;
     }
-    .spinner {
-      border: 6px solid #ccc;
-      border-top: 6px solid gold;
-      border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      animation: spin 1s linear infinite;
+    .buttons a {
+      padding: 12px 20px;
+      background: gold;
+      color: black;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      transition: 0.3s;
     }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }/* ANIMASI TEKS */
-@keyframes bounce {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-10px); }
-}
-.jump-text span {
-  display: inline-block;
-  animation: bounce 0.6s infinite alternate;
-}
-.jump-text span:nth-child(n) {
-  animation-delay: calc(0.1s * var(--i));
-}
-
-/* KONTEN UTAMA */
-.main-content {
-  display: none;
-  background: url('https://source.unsplash.com/random/1920x1080') no-repeat center center/cover;
-  height: 100vh;
-  color: white;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 20px;
-}
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
-.content {
-  position: relative;
-  z-index: 2;
-  max-width: 800px;
-}
-
-/* TOMBOL */
-.buttons {
-  display: flex;
-  justify-content: center;
-  gap: 15px;
-  flex-wrap: wrap;
-  margin-top: 15px;
-}
-.buttons a {
-  padding: 12px 20px;
-  background: gold;
-  color: black;
-  text-decoration: none;
-  border-radius: 5px;
-  font-weight: bold;
-  transition: 0.3s;
-}
-.buttons a:hover {
-  background: darkgoldenrod;
-}
-
-/* FOOTER */
-footer {
-  background: #111;
-  color: white;
-  padding: 40px 20px;
-  text-align: center;
-}
-.footer-container {
-  max-width: 1200px;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.footer-section {
-  flex: 1;
-  min-width: 250px;
-  padding: 15px;
-}
-.footer-section h3 {
-  margin-bottom: 10px;
-}
-.social-icons {
-  margin-top: 10px;
-}
-.social-icons a {
-  color: white;
-  margin-right: 10px;
-  font-size: 18px;
-}
-.copyright {
-  margin-top: 20px;
-  font-size: 14px;
-  color: gray;
-}
-
-/* RESPONSIVE */
-@media (max-width: 768px) {
-  .footer-container {
-    flex-direction: column;
-    text-align: center;
-  }
-}
-
+    .buttons a:hover {
+      background: darkgoldenrod;
+    }
   </style>
 </head>
 <body>
-  <!-- PRELOADER -->
-  <div class="preloader">
-    <div class="spinner"></div>
-  </div>  <!-- KONTEN UTAMA -->  <div class="main-content">
-    <div class="overlay"></div>
-    <div class="content">
-      <h1 class="jump-text">
-        <span style="--i:1">A</span><span style="--i:2">T</span><span style="--i:3">-</span><span style="--i:4">T</span><span style="--i:5">A</span><span style="--i:6">U</span><span style="--i:7">F</span><span style="--i:8">IQ</span>
-      </h1>
-      <h3>Bogem - Grogol - Diwek - Jombang - Jawa Timur</h3>
-      <div class="buttons">
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzSEfwcwN__3z9TJOcHfaig2iS4F-nwFxlwk6ZomKwhBpxCw/viewform?pli=1">PSB Online</a>
-        <a href="#">DAFTAR ONLINE</a>
-        <a href="#">Login Dakwah Santri</a>
-      </div>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="logo">
+      <img src="logo.png" alt="Ponpes At-Taufiq">
     </div>
-  </div>  <footer>
-    <div class="footer-container">
-      <div class="footer-section">
-        <h3>PONPES AT TAUFIQ</h3>
-        <p>Jl. KH. Shobari No.48B, Bogem, Grogol, Diwek, Jombang, Jawa Timur, Indonesia</p>
-        <div class="social-icons">
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-        </div>
-      </div>
+    <div class="menu-icon" onclick="toggleMenu()">
+      <i class="fas fa-bars"></i>
     </div>
-    <div class="copyright">
-      &copy; 2024 Ponpes At Taufiq. All Rights Reserved
+  </header>  <!-- MENU HAMBURGER -->  <nav class="menu" id="menu">
+    <span class="close-btn" onclick="toggleMenu()">&times;</span>
+    <ul>
+      <li><a href="#">Beranda</a></li>
+      <li><a href="#">Biaya Pendaftaran</a></li>
+      <li><a href="#">Syarat Pendaftaran</a></li>
+    </ul>
+  </nav>  <!-- KONTEN UTAMA -->  <div class="main-content">
+    <h1>Ponpes At-Taufiq</h1>
+    <h3>Bogem - Grogol - Diwek - Jombang - Jawa Timur</h3>
+    <div class="buttons">
+      <a href="#">PSB Online</a>
     </div>
-  </footer>  <script>
-    window.addEventListener("load", function () {
-      setTimeout(() => {
-        document.querySelector(".preloader").style.opacity = "0";
-        setTimeout(() => {
-          document.querySelector(".preloader").style.display = "none";
-          document.querySelector(".main-content").style.display = "flex";
-        }, 500);
-      }, 2000);
-    });
+  </div>  <script>
+    function toggleMenu() {
+      document.getElementById("menu").classList.toggle("active");
+    }
   </script></body>
 </html>
